Fixed spacing on all pages.

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -44,7 +44,7 @@ File: Layout CSS
 
 /* Content Area
 --------------------------------------------------------------------------------------------------------------- */
-.container{padding:80px 0;}
+.container{padding:20px 0;}
 .container.csmall{padding:7px 0px;}
 
 /* Content */
